--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,22 +13,21 @@
         android:theme="@style/Theme.Lecture4Demo3"
         tools:targetApi="31">
         <activity
-            android:name=".StudentsRcyclerViewActivity"
+            android:name=".Modules.Students.StudentsRcyclerViewActivity"
             android:exported="true">
         </activity>
         <activity
-            android:name=".StudentsListActivity"
+            android:name=".Modules.Students.StudentsListActivity"
             android:exported="true">
         </activity>
         <activity
-            android:name=".AddStudentActivity"
+            android:name=".Modules.AddStudent.AddStudentActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
